# qreflect

./: .clang-format  .gitignore  CMakeLists.txt  README.md
examples/: example.cpp  json.cpp  sqlite_ddl.cpp
include/: qreflect.hpp
